add more useful tools

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,11 +1,14 @@
 tap "homebrew/cask-fonts"
+tap "clementtsang/bottom"
 
 brew "bat"
+brew "bottom"
 brew "broot"
 brew "exa"
 brew "fd"
 brew "fzf"
 brew "git"
+brew "go"
 brew "jq"
 brew "neovim"
 brew "rbenv"
@@ -13,6 +16,7 @@ brew "ripgrep"
 brew "shellcheck"
 brew "starship"
 brew "stow"
+brew "vegeta"
 brew "z"
 
 cask "font-iosevka-nerd-font"
