add delta for diffs

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,9 +1,27 @@
 [user]
 	name = Georges Haidar
 	email = ghaidar0@gmail.com
+
 [push]
 	default = current
+
 [alias]
 	lsb = for-each-ref --format='%(refname:short)' refs/heads/**
 	home = "! set -eo pipefail; git lsb | egrep '^(main|master)$' | head -n 1 | xargs git switch --no-guess || echo 'main/master branch not found'"
 
+[pager]
+	diff = delta
+	log = delta
+	reflog = delta
+	show = delta
+
+[delta]
+	features = side-by-side line-numbers decorations
+	navigate = true
+	line-numbers = true
+	line-numbers-minus-style = "red"
+	line-numbers-plus-style = "green"
+	line-numbers-zero-style = "white"
+
+[interactive]
+	diffFilter = delta --color-only
