--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,9 +1,9 @@
 tap "homebrew/cask-fonts"
 tap "clementtsang/bottom"
+tap "cube2222/octosql"
 
 brew "bat"
 brew "bottom"
-brew "broot"
 brew "efm-langserver"
 brew "exa"
 brew "fd"
@@ -11,9 +11,16 @@ brew "fzf"
 brew "git"
 brew "git-delta"
 brew "go"
+brew "graphviz"
+brew "helm"
+brew "hyperfine"
 brew "jq"
+brew "kind"
+brew "kubectl"
 brew "lazygit"
+brew "lazydocker"
 brew "neovim", args: ["HEAD"]
+brew "octosql"
 brew "procs"
 brew "rbenv"
 brew "ripgrep"
